# ai_robot_control

./:     .pub  CMakeLists.txt  package.xml
action/: tracking.action
config/: main_tree.xml
launch/: run_control.launch
src/: await.cpp  await.h  main_tree.xml  run_bh_tree.cpp  search_target.cpp  search_target.h  show.cpp  show.h  tracking_client.cpp  tracking_client.h  tracking_server.cpp  tracking_server.h  tracking_server_node.cpp  waving.cpp  waving.h  waving_detected.cpp  waving_detected.h
